@@ -18,7 +18,6 @@ Known bugs with zapping, don't report them
 	~ Zapzilla: Calls fetch_page more often than necessary,
 	  investigate.
 	* Don't compile conv_gen.s if $host != x86
-	* PgUp/PgDown changes the channel in TTX mode.
 	~ Zapzilla: what's v4lx doing on standard change?
 
 
